# RUST-SIMPLE-IMAGEBOARD-1

./: Cargo.toml  README.md
src/: main.rs
templates/: base.html  homepage.html  thread.html
